SCUBA-504 #time 8h #inprogress Use datatables on the availability tab and reduce number of nights to 10. Change accommodation to use vertical column and remove handlebars stuff. Current bug is horizontal scroll bar

--- a/public_html/dashboard/css/components/availability-table.css
+++ b/public_html/dashboard/css/components/availability-table.css
@@ -1,9 +1,11 @@
 
 .ExcelTable {
     text-align: center;
-    overflow-x: scroll;
+    overflow-x: hidden !important;
     overflow-y: hidden;
     white-space: nowrap;
+    table-layout:fixed;
+    width: 100% !important;
 }
 
 .ExcelTable th {
@@ -17,6 +19,7 @@
 
 .ExcelTable_Row {
     border-top: 1px solid #ccc;
+    border-right: 1px solid #ccc;
     padding: 5px;
     text-align: center;
     min-width: 150px;
@@ -34,6 +37,7 @@
 
 .InfoTable_Row {
     border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
 }
 
 .InfoTable_Title {
